--- a/style.css
+++ b/style.css
@@ -1,9 +1,13 @@
 * {
   padding: 0;
   margin: 0;
+  background-image: url("img/img1.jpg");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: 100% auto;
 }
-body {
-}
+
 main {
   width: 100%;
   position: relative;
@@ -17,7 +21,10 @@ h1 {
 
 header {
   display: grid;
-  grid-template-areas: "nom list";
+  grid-template-areas:
+    "list"
+    "nom"
+    "nom1";
   align-items: center;
   padding: 10px;
   background-color: rgb(241, 236, 227);
@@ -25,15 +32,24 @@ header {
 
 .box-text {
   display: flex;
-
 }
-.text{
+.text {
   margin: auto;
   text-align: center;
 }
 
 #nombre {
   grid-area: nom;
+  color: white;
+  text-align: center;
+  padding-top: 20%;
+  text-shadow: 2px 2px 4px #000000;
+}
+#nombre1 {
+  grid-area: nom1;
+  color: white;
+  text-align: center;
+  text-shadow: 2px 2px 4px #000000;
 }
 
 h {
@@ -47,24 +63,7 @@ h:hover {
 }
 
 #lista1 {
-  text-align: right;
+  text-align: center;
   grid-area: list;
-}
-.img {
-  overflow: hidden;
-  width: 100%;
-}
-.img #img1 {
-  padding-left: 50vw;
-  width: 100%;
-  height: 100%;
-  object-fit: contain;
-}
-
-#img2 {
-  position: absolute;
-  width: 30%;
-  height: 76%;
-  right: 30%;
-  bottom: 20px;
+  color: white;
 }
