--- a/style.css
+++ b/style.css
@@ -83,19 +83,35 @@ main {
   background-color: #808080;
 }
 
-.image-wrapper img {
-  width: 80px;
-  height: auto;
-  display: inline-block;
-  margin-right: 20px;
-  border-radius: 5px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-  transition: transform 0.3s ease;
-  object-fit: cover;
+#fotos {
+  position: relative;
+  overflow: hidden;
+  width: 100%;
+  top: 60px;
 }
 
-.image-wrapper:hover img {
-  transform: scale(1.1);
+.image-slider {
+  display: flex;
+  width: 100%;
+}
+
+.image-wrapper {
+  display: flex;
+  animation: scroll 20s linear infinite;
+}
+
+.image-wrapper img {
+  width: 80px;
+  margin-right: 30px;
+}
+
+@keyframes scroll {
+  0% {
+    transform: translateX(0);
+  }
+  100% {
+    transform: translateX(-50%);
+  }
 }
 
 #informacion {
@@ -103,6 +119,15 @@ main {
   align-items: center;
   height: 100vh;
   background-color: #808080;
+}
+
+.text-wrapper {
+  display: flex;
+  justify-content: space-between;
+  background-color: #42424284;
+  padding: 40px;
+  border-radius: 10px;
+  box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.1);
 }
 
 .box-text {
@@ -114,6 +139,7 @@ main {
   color: white;
   font-size: 20px;
   margin: 0;
+  margin-top: 20px;
 }
 .box-text h1 {
   text-shadow: 2px 2px 4px #000000;
@@ -121,6 +147,7 @@ main {
   font-size: 40px;
   line-height: 1.6;
   margin: 0;
+  margin-top: 28px;
 }
 
 #foto {
@@ -177,3 +204,36 @@ main {
   text-align: center;
 }
 
+#contacto {
+  color: rgb(255, 255, 255);
+  padding: 50px;
+}
+
+#contacto p {
+  padding: 5px;
+}
+
+.footer {
+  background-color: #333;
+  color: #f1f1f1;
+  padding: 20px 0;
+  text-align: center;
+  font-size: 14px;
+  width: 100%;
+  position: relative;
+  bottom: 0;
+  box-shadow: 0 -2px 10px rgba(0, 0, 0, 0.2);
+}
+
+.footer-content {
+  max-width: 800px;
+  margin: 0 auto;
+}
+
+.footer p {
+  margin: 5px 0;
+}
+
+.footer span {
+  color: #e63946;
+}
