--- a/fotos/estilofotos.css
+++ b/fotos/estilofotos.css
@@ -42,6 +42,23 @@ h1 {
   transform: scale(1.05);
 }
 
+.boton-volver {
+  position: fixed;
+  top: 10px;
+  right: 10px;
+  background-color: #333;
+  color: white;
+  padding: 10px 20px;
+  text-decoration: none;
+  border-radius: 5px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  transition: background-color 0.3s ease;
+}
+
+.boton-volver:hover {
+  background-color: #555;
+}
+
 @media (min-width: 768px) and (max-width: 1024px) {
   .galeria {
     grid-template-columns: repeat(2, 1fr);
